# Oxilink

./: Cargo.toml  Dockerfile  LICENSE  README.md
src/: error.rs  main.rs  player.rs
src/rest/: audio_loading.rs  info.rs  mod.rs  utils.rs  websocket.rs
src/websocket/: mod.rs  models.rs
