[package]
name = "oxilink"
version = "0.1.0"
authors = ["james7132 <contact@jamessliu.com>"]
edition = "2018"

[dependencies]
actix = "0.11.0-beta.2"
actix-web = "4.0.0-beta.3"
actix-web-actors = "4.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "0.5"
songbird = "0.1.4"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
